fix(ui): Inactive elements are hard to see

--- a/packages/kitten-scientists/source/ui/components/Button.module.css
+++ b/packages/kitten-scientists/source/ui/components/Button.module.css
@@ -11,10 +11,10 @@
   }
 
   &.inactive {
-    opacity: 0.2;
+    opacity: 0.4;
 
     &:hover {
-      opacity: 0.4;
+      opacity: 0.6;
     }
   }
 
